Fix interface on mobile some and memory usage calc

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -61,6 +61,67 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+@media only screen and (max-width: 767px) {
+  .container {
+    width: 100% !important;
+    padding: 0px !important;
+  }
+  .rowclass {
+    margin: 0px !important;
+    border-radius: 0px !important;
+  }  
+  #container {
+    margin: 0px !important;
+    margin-bottom: 50px !important;
+    width: 120px !important;
+    height: 120px !important;
+    position: relative;
+    float: left;
+  }
+
+  .valuetxt {
+    color: #FFF;
+    font-size:32px;
+  }
+
+  .progressbar-text {
+    top: 63% !important;
+  }
+
+  #container2 {
+    margin: 0px !important;
+    margin-bottom: 50px !important;
+    width: 120px !important;
+    height: 120px !important;
+    position: relative;
+    float: right;
+  }
+  .bal {
+    font-size: 4vw !important;
+  }
+}
+
+.hcontainer {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.valuetxt {
+  color: #FFF;
+  font-size:32px;
+}
+
+
+.rowclass {
+  background-color:#000;
+  background: linear-gradient(165deg, rgba(52,51,46,1) 0%, rgba(38,38,38,1) 48%, rgba(0,0,0,1) 100%);
+  border-radius:30px;
+  padding:30px;
+  margin:15px;
+}
+
 footer {
   position: absolute;
   bottom: 0;
@@ -239,7 +300,7 @@ footer {
 }
 
 .progressbar-text {
-  top: 58% !important;
+  top: 58%;
 }
 
 // Input Fields
